# pixelstrom

./: .gitignore  .prettierignore  Cargo.toml  METRICS.md  build.rs  default.nix  index.html
proto/: WebSocketMessage.proto
python-client/: client.py  default.nix
src/: app_state.rs  framebuffer.rs  main.rs  statistics.rs
src/ascii_server/: client_connection.rs  mod.rs  parser.rs  user_manager.rs  user_scheduler.rs
src/http_api/: current_screen.rs  mod.rs  websocket.rs
src/http_server/: current_screen_size.rs  mod.rs  websocket.rs
src/proto/: ScreenSync.proto
static/: client.js  index.html
web/: index.html  package-lock.json  package.json  vite.config.js
web/static/: client.js  index.html  style.css
web/vue/: App.vue
web/vue/assets/: base.css
web/vue/components/: PixelScreen.vue  UserDetails.vue  UsersSidebar.vue
web/vue/components/icon/: IconArrowsRight.vue  IconEye.vue  IconEyeSlash.vue
web/vue/components/user/: FollowUserButton.vue  UnfollowUsersButton.vue  UserDetails.vue  UsersSidebar.vue
