[package]
name = "pixelstrom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8",  default-features = false, features = ["tokio", "http1", "ws", "tracing"] }
colorgrad = "0.7"
futures = "0.3"
nom = "7.1.3"
prost = "0.13"
rand = "0.8"
tokio = { version = "1.42", default-features = false, features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tower-http = { version = "0.6", default-features = false, features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.13"
